# platformer-2

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  notes.txt
.cache/clangd/index/: main.cpp.4E3EA6B0C1EAC2A3.idx
src/: CMakeLists.txt  ecs.h  game.cpp  game.h  main.cpp  storage.h  util.h
src/physics/: CMakeLists.txt  collision.cpp  collision.h  collision_shape.h  dynamics.cpp  dynamics.h  physics.cpp  physics.h  types.h
src/physics/dynamics/: constraint.h  contact_solver.cpp  contact_solver.h  world.cpp  world.h  world_data.h
src/render/: CMakeLists.txt  pass.cpp  pass.h  render.cpp  render.h
src/shaders/: CMakeLists.txt  frag.glsl  vert.glsl
